--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site
 
 title: Base
-url: "https://orange-ape.cloudvent.net/"
+url: "https://inves.club/demo"
 baseurl:
 google_analytics_key:
 disqus_shortname:
